--- a/index.html
+++ b/index.html
@@ -10,22 +10,22 @@
   <meta content="" name="keywords">
 
   <!-- Favicons -->
-  <link href="./template/assets/img/favicon.png" rel="icon">
-  <link href="./template/assets/img/apple-touch-icon.png" rel="apple-touch-icon">
+  <link href="template/assets/img/favicon.png" rel="icon">
+  <link href="template/assets/img/apple-touch-icon.png" rel="apple-touch-icon">
 
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
 
   <!-- Vendor CSS Files -->
-  <link href="./template/assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-  <link href="./template/assets/vendor/icofont/icofont.min.css" rel="stylesheet">
-  <link href="./template/assets/vendor/remixicon/remixicon.css" rel="stylesheet">
-  <link href="./template/assets/vendor/owl.carousel/assets/owl.carousel.min.css" rel="stylesheet">
-  <link href="./template/assets/vendor/boxicons/css/boxicons.min.css" rel="stylesheet">
-  <link href="./template/assets/vendor/venobox/venobox.css" rel="stylesheet">
+  <link href="template/assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+  <link href="template/assets/vendor/icofont/icofont.min.css" rel="stylesheet">
+  <link href="template/assets/vendor/remixicon/remixicon.css" rel="stylesheet">
+  <link href="template/assets/vendor/owl.carousel/assets/owl.carousel.min.css" rel="stylesheet">
+  <link href="template/assets/vendor/boxicons/css/boxicons.min.css" rel="stylesheet">
+  <link href="template/assets/vendor/venobox/venobox.css" rel="stylesheet">
 
   <!-- Template Main CSS File -->
-  <link href="./template/assets/css/style.css" rel="stylesheet">
+  <link href="template/assets/css/style.css" rel="stylesheet">
 
   <!-- =======================================================
   * Template Name: Personal - v2.4.0
@@ -471,18 +471,18 @@
 
 
   <!-- Vendor JS Files -->
-  <script src="./template/assets/vendor/jquery/jquery.min.js"></script>
-  <script src="./template/assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-  <script src="./template/assets/vendor/jquery.easing/jquery.easing.min.js"></script>
-  <script src="./template/assets/vendor/php-email-form/validate.js"></script>
-  <script src="./template/assets/vendor/waypoints/jquery.waypoints.min.js"></script>
-  <script src="./template/assets/vendor/counterup/counterup.min.js"></script>
-  <script src="./template/assets/vendor/owl.carousel/owl.carousel.min.js"></script>
-  <script src="./template/assets/vendor/isotope-layout/isotope.pkgd.min.js"></script>
-  <script src="./template/assets/vendor/venobox/venobox.min.js"></script>
+  <script src="template/assets/vendor/jquery/jquery.min.js"></script>
+  <script src="template/assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+  <script src="template/assets/vendor/jquery.easing/jquery.easing.min.js"></script>
+  <script src="template/assets/vendor/php-email-form/validate.js"></script>
+  <script src="template/assets/vendor/waypoints/jquery.waypoints.min.js"></script>
+  <script src="template/assets/vendor/counterup/counterup.min.js"></script>
+  <script src="template/assets/vendor/owl.carousel/owl.carousel.min.js"></script>
+  <script src="template/assets/vendor/isotope-layout/isotope.pkgd.min.js"></script>
+  <script src="template/assets/vendor/venobox/venobox.min.js"></script>
 
   <!-- Template Main JS File -->
-  <script src="./template/assets/js/main.js"></script>
+  <script src="template/assets/js/main.js"></script>
 
 </body>
 
