Signed-off-by: arfi-nadir <arfi.nadir11@gmail.com>

--- a/projects/analyze-a-dataset-with-python-data-science-libraries/analyze-a-dataset-with-python-data-science-libraries.html
+++ b/projects/analyze-a-dataset-with-python-data-science-libraries/analyze-a-dataset-with-python-data-science-libraries.html
@@ -46,15 +46,15 @@
 	<div class="container">
 		<div class="row">
 		<div class="col-lg-8">
-			<h2 class="portfolio-title">Data Visualization project</h2>
+			<h2 class="portfolio-title">Analyze a dataset with python data-science libraries</h2>
 			<div class="owl-carousel portfolio-details-carousel">
-				<img src="..//projects/projects/data-visualization-project.jpg" class="img-fluid" alt="">
+				
 			</div>
 		</div>
 		<div class="col-lg-4 portfolio-info">
-			<h3>Data Visualization project</h3>
+			<h3>Analyze a dataset with python data-science libraries</h3>
 			<ul>
-			<li><strong>Category</strong>: web dev</li>
+			<li><strong>Category</strong>: Machine Learning</li>
 			<li><strong>Github URL</strong>: <a href=""></a></li>
 			</ul>
 
