--- a/projects/extracting-wifi-passwords-through-command-line-using-python/extracting-wifi-passwords-through-command-line-using-python.html
+++ b/projects/extracting-wifi-passwords-through-command-line-using-python/extracting-wifi-passwords-through-command-line-using-python.html
@@ -46,13 +46,13 @@
 	<div class="container">
 		<div class="row">
 		<div class="col-lg-8">
-			<h2 class="portfolio-title">Extraction of Wifi passwords in python</h2>
+			<h2 class="portfolio-title">Extracting wifi passwords through command line using python</h2>
 			<div class="owl-carousel portfolio-details-carousel">
-				<img src="..//projects/projects/extraction-of-wifi-passwords-in-python.jpg" class="img-fluid" alt="">
+				
 			</div>
 		</div>
 		<div class="col-lg-4 portfolio-info">
-			<h3>Extraction of Wifi passwords in python</h3>
+			<h3>Extracting wifi passwords through command line using python</h3>
 			<ul>
 			<li><strong>Category</strong>: networking</li>
 			<li><strong>Github URL</strong>: <a href=""></a></li>
