--- a/projects/sending-email-with-smtp-library-in-python/sending-email-with-smtp-library-in-python.html
+++ b/projects/sending-email-with-smtp-library-in-python/sending-email-with-smtp-library-in-python.html
@@ -46,15 +46,15 @@
 	<div class="container">
 		<div class="row">
 		<div class="col-lg-8">
-			<h2 class="portfolio-title">Programming linear regression in python from scratch</h2>
+			<h2 class="portfolio-title">Sending email with SMTP library in python</h2>
 			<div class="owl-carousel portfolio-details-carousel">
-				<img src="..//projects/projects/programming-linear-regression-in-python-from-scratch.jpg" class="img-fluid" alt="">
+				
 			</div>
 		</div>
 		<div class="col-lg-4 portfolio-info">
-			<h3>Programming linear regression in python from scratch</h3>
+			<h3>Sending email with SMTP library in python</h3>
 			<ul>
-			<li><strong>Category</strong>: Machine Learning</li>
+			<li><strong>Category</strong>: networking</li>
 			<li><strong>Github URL</strong>: <a href=""></a></li>
 			</ul>
 
