--- a/projects/creating-a-port-scanner-using-python/creating-a-port-scanner-using-python.html
+++ b/projects/creating-a-port-scanner-using-python/creating-a-port-scanner-using-python.html
@@ -46,13 +46,13 @@
 	<div class="container">
 		<div class="row">
 		<div class="col-lg-8">
-			<h2 class="portfolio-title">TCP chat in python</h2>
+			<h2 class="portfolio-title">Creating a port scanner using python</h2>
 			<div class="owl-carousel portfolio-details-carousel">
-				<img src="..//projects/projects/tcp-chat-in-python.jpg" class="img-fluid" alt="">
+				
 			</div>
 		</div>
 		<div class="col-lg-4 portfolio-info">
-			<h3>TCP chat in python</h3>
+			<h3>Creating a port scanner using python</h3>
 			<ul>
 			<li><strong>Category</strong>: networking</li>
 			<li><strong>Github URL</strong>: <a href=""></a></li>
