--- a/projects/developping-a-tcp-chat-room-in-python/developping-a-tcp-chat-room-in-python.html
+++ b/projects/developping-a-tcp-chat-room-in-python/developping-a-tcp-chat-room-in-python.html
@@ -46,13 +46,13 @@
 	<div class="container">
 		<div class="row">
 		<div class="col-lg-8">
-			<h2 class="portfolio-title">Send email with SMTP library in python</h2>
+			<h2 class="portfolio-title">Developping a TCP chat room in python</h2>
 			<div class="owl-carousel portfolio-details-carousel">
-				<img src="..//projects/projects/send-email-with-smtp-library-in-python.jpg" class="img-fluid" alt="">
+				
 			</div>
 		</div>
 		<div class="col-lg-4 portfolio-info">
-			<h3>Send email with SMTP library in python</h3>
+			<h3>Developping a TCP chat room in python</h3>
 			<ul>
 			<li><strong>Category</strong>: networking</li>
 			<li><strong>Github URL</strong>: <a href=""></a></li>
